# django-template

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: refactor-optimizer.md
.claude/commands/: commit.md  make_wt.md  migrate.md  precommit.md  runserver.md  test.md
agent_docs/: README.md  api-endpoints.md  database-schema.md  testing-guide.md
config/: settings.py  urls.py
pages/: tests.py  urls.py  views.py
plan/: README.md  new-project-setup.md  project-structure.md
static/css/: main.css
static/js/: main.js
templates/: base.html
templates/pages/: home.html
